--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,8 +1,11 @@
 {% extends "base.html" %}
 {% load blog_extras %}
+{% load cache %}
 {% block content %} 
   <h2>Blog Posts</h2>
   {% for post in posts %} 
+  {% cache 300 post_list post%}
+
     <div class="row">
       <div class="col">
         <h3>{{ post.title }}</h3>
@@ -14,5 +17,8 @@
         </p>
       </div>
       </div>
+{% endcache %}
+
     {% endfor %}
+
   {% endblock %}
